# TUD-PV-monitoring-tool

./: .gitignore  .gitmodules  README.md  TUD-opet-supervisor.py  TUD_opet_supervisor.py  Weatherdb_to_pyth.py  opet-supervisor-config.json  opet-supervisor.py  opet-supervisor_example.py  pyproject.toml  pyt-to-SQL.py  pyt_to_SQL.py  supervisor.bat  test1.csv
OPET_control/: OPET_control.py  __init__.py  calibrate.py
config/: measurement_config.json  opet_bus_info.json
example-config/: measurement_config.json  opet_info.json
example-config-test/: measurement_config.json  opet_bus_info.json  opet_info.json
example_config/: measurement_config.json  opet_bus_info.json
export/: curve.csv  curve2.csv  curve_data.csv  point.csv  point2.csv  point3.csv  point_data.csv
helper_packages/measurement_scheduling_tools/: __init__.py
helper_packages/serial_by_serial/: README.md  __init__.py  serial_by_serial.py
measurement_scheduling_tools/: README.md  __init__.py  setup.py
measurement_scheduling_tools/notebooks/: datetime_range_examples.py
opet_supervisor_tools/: opet_supervisor_tools.py
serial_by_serial/: setup.py
src/tud_pv_monitoring/: __init__.py  measurement_scheduling_tools.py  supervisor.py
src/tud_pv_monitoring/database/: __init__.py  (+2 more)
supervisor_tools/: opet_supervisor_tools.py
supervisor_tools/oept_supervisor_tools/: __init__.py
supervisor_tools/opet_supervisor_tools/: opet_supervisor_tools.py
supervisor_tools/pyt_to_SQL/: Weatherdb_to_pyth.py  __init__.py  pyt_to_SQL.py
user_tools/: download.py  lifedata.py  plot_csv.py  port_finder.py
(+28 files in other folders)
